--- a/positiveNegative/style.css
+++ b/positiveNegative/style.css
@@ -1,10 +1,15 @@
-/*
-  Create styles for showing evalPosNeg function values
-  Example: if both numbers are negative, color the output
-  to red. If both numbers are positive, color the output to green.
-  If one number is positive and one is negative, color it blue.
-*/
+.full-page-height {
+  height: 100vh;
+}
 
-.resultValues {
-  border: 3px solid red;
+.full-height {
+  height: 100%;
+}
+
+.center {
+  text-align: center;
+}
+
+.header-padding {
+  padding-top: 15px;
 }
