added ejs and views, deleted index.html

--- a/compact-contact-form/views/index.ejs
+++ b/compact-contact-form/views/index.ejs
@@ -11,6 +11,33 @@
 
 <body>
   <div class="container">
+    <table class="table">
+      <thead>
+        <tr>
+          <th scope="col">#</th>
+          <th scope="col">First</th>
+          <th scope="col">Last</th>
+          <th scope="col">Email</th>
+          <th scope="col">Subject</th>
+          <th scope="col">Message</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="row">1</th>
+          <td>Mark</td>
+          <td>Otto</td>
+          <td>@mdo</td>
+          <td>@mdo</td>
+          <td>@mdo</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+
+  <br>
+  <br>
+  <div class="container">
     <form class="well span8" action="/saveCompactContact" , method="post">
       <div class="row">
         <div class="span3">
