Week 6 Day 1: Compact Contact Form - Finished

--- a/compact-contact-form/views/index.ejs
+++ b/compact-contact-form/views/index.ejs
@@ -23,14 +23,40 @@
         </tr>
       </thead>
       <tbody>
-        <tr>
-          <th scope="row">1</th>
-          <td>Mark</td>
-          <td>Otto</td>
-          <td>@mdo</td>
-          <td>@mdo</td>
-          <td>@mdo</td>
-        </tr>
+        <% for(var i = 0; i < contacts.length; i++) {%>
+          <tr>
+            <td>
+              <span>
+                <%= i + 1 %>
+              </span>
+            </td>
+            <td>
+              <span>
+                <%= contacts[i].firstName %>
+              </span>
+            </td>
+            <td>
+              <span>
+                <%= contacts[i].lastName %>
+              </span>
+            </td>
+            <td>
+              <span>
+                <%= contacts[i].email %>
+              </span>
+            </td>
+            <td>
+              <span>
+                <%= contacts[i].subject %>
+              </span>
+            </td>
+            <td>
+              <span>
+                <%= contacts[i].message %>
+              </span>
+            </td>
+          </tr>
+          <% } %>
       </tbody>
     </table>
   </div>
