--- a/compact-contact-form/views/results.ejs
+++ b/compact-contact-form/views/results.ejs
@@ -12,7 +12,7 @@
 
 <body>
   <div class="container">
-    <table class="table">
+    <table class="table table-hover">
       <thead>
         <tr>
           <th scope="col">#</th>
