--- a/postal-address-app/views/index.ejs
+++ b/postal-address-app/views/index.ejs
@@ -81,7 +81,8 @@
         <fieldset>
           <!-- Address Form -->
 
-          <h2>Address</h2>
+          <h2>Postal Address</h2>
+          <br>
 
           <!-- Full Name input -->
           <div class="control-group">
