--- a/taskTrackerApp/views/index.jade
+++ b/taskTrackerApp/views/index.jade
@@ -2,4 +2,8 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
+
+  div
+    a(class="button", href="/tasklist") Task List
+    #[br]
+    a(class="button", href="/addtask") Add Task
