--- a/taskTrackerApp/views/layout.jade
+++ b/taskTrackerApp/views/layout.jade
@@ -1,7 +1,36 @@
 doctype html
-html
+html( lang="en")
   head
     title= title
+    meta( charset='utf-8' )
+    meta( http-equiv='X-UA-Compatible', content='IE=edge' )
+    meta( name='viewport', content='width=device-width, initial-scale=1.0' )
+    meta( name='description', content='Baking Bootstrap Snippets with Jade' )
+    //- Bootswatch Theme
+    link(href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.0/flatly/bootstrap.min.css", rel="stylesheet")
     link(rel='stylesheet', href='/stylesheets/style.css')
-  body
-    block content
+  body(style="padding-bottom:10rem;")
+    .container
+    //- Start of navbar
+    nav.navbar.navbar-default( role="navigation" )
+        .navbar-header
+            button.navbar-toggle.collapsed( type="button", data-toggle="collapse", data-target="#navbar-inverse", aria-expanded="false", aria-controls="navbar")
+                span.sr-only Toggle navigation
+                span.icon-bar
+                span.icon-bar
+                span.icon-bar
+            a.navbar-brand(href="#") Task Tracker
+    
+        #navbar-inverse.collapse.navbar-collapse
+            ul.nav.navbar-nav
+                li.active: a( href="#") Home
+                li: a( href="/tasklist" ) Task List
+                li: a( href="/addtask" ) Add Task
+  //- Start of content area                  
+  block content
+
+    script( src='//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js' )
+    script( src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js' )
+        
+ 
+        
