--- a/taskTrackerApp/views/tasklist.jade
+++ b/taskTrackerApp/views/tasklist.jade
@@ -1,9 +1,11 @@
 extends layout
 
 block content
-  h1.
-    Task List
-  ul
-    each task, i in tasklist
-      li
-        a(href="mailto:#{task.task}")= task.description
+  .container
+    
+    h1.
+      Task List
+    ul
+      each task, i in tasklist
+        li
+          task.task= task.description
