--- a/taskTrackerApp/views/layout.jade
+++ b/taskTrackerApp/views/layout.jade
@@ -7,7 +7,7 @@ html( lang="en")
     meta( name='viewport', content='width=device-width, initial-scale=1.0' )
     meta( name='description', content='Baking Bootstrap Snippets with Jade' )
     //- Bootswatch Theme
-    link(href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.0/flatly/bootstrap.min.css", rel="stylesheet")
+    link(href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.0/superhero/bootstrap.min.css", rel="stylesheet")
     link(rel='stylesheet', href='/stylesheets/style.css')
   body(style="padding-bottom:10rem;")
     .container
