Add task remove / task update functionality

--- a/taskTrackerApp/views/index.jade
+++ b/taskTrackerApp/views/index.jade
@@ -1,9 +1,8 @@
 extends layout
 
 block content
-  h1= title
 
-  div
-    a(class="button", href="/tasklist") Task List
-    #[br]
-    a(class="button", href="/addtask") Add Task
+<html>
+  <div>
+    
+  </div>
