--- a/taskTrackerApp/views/layout.jade
+++ b/taskTrackerApp/views/layout.jade
@@ -19,11 +19,11 @@ html( lang="en")
                 span.icon-bar
                 span.icon-bar
                 span.icon-bar
-            a.navbar-brand(href="#") Task Tracker
+            a.navbar-brand(href="/") Task Tracker
     
         #navbar-inverse.collapse.navbar-collapse
             ul.nav.navbar-nav
-                li.active: a( href="#") Home
+                li.active: a( href="/") Home
                 li: a( href="/tasklist" ) Task List
                 li: a( href="/addtask" ) Add Task
   //- Start of content area                  
