--- a/taskTrackerApp/views/layout.jade
+++ b/taskTrackerApp/views/layout.jade
@@ -5,10 +5,12 @@ html( lang="en")
     meta( charset='utf-8' )
     meta( http-equiv='X-UA-Compatible', content='IE=edge' )
     meta( name='viewport', content='width=device-width, initial-scale=1.0' )
-    meta( name='description', content='Baking Bootstrap Snippets with Jade' )
+    meta( name='description', content='Task Tracker App' )
     //- Bootswatch Theme
     link(href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.0/superhero/bootstrap.min.css", rel="stylesheet")
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css')
+    script(defer='', src='https://use.fontawesome.com/releases/v5.0.10/js/all.js', integrity='sha384-slN8GvtUJGnv6ca26v8EzVaR9DC58QEwsIk9q1QXdCU8Yu8ck/tL/5szYlBbqmS+', crossorigin='anonymous')
   body(style="padding-bottom:10rem;")
     .container
     //- Start of navbar
@@ -23,7 +25,9 @@ html( lang="en")
     
         #navbar-inverse.collapse.navbar-collapse
             ul.nav.navbar-nav
-                li.active: a( href="/") Home
+                li: a( href="/") 
+                    i.fas.fa-home.fa-fw.fa-lg(aria-hidden="true")
+                    |   Home
                 li: a( href="/tasklist" ) Task List
                 li: a( href="/addtask" ) Add Task
   //- Start of content area                  
