--- a/taskTrackerApp/public/stylesheets/style.css
+++ b/taskTrackerApp/public/stylesheets/style.css
@@ -1,8 +1,16 @@
 body {
   padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 a {
-  color: #00B7FF;
+  color: #00b7ff;
+}
+
+#navbar-inverse {
+  font-size: 14px;
+}
+
+.navbar-brand {
+  font-size: 18px;
 }
