--- a/taskTrackerApp/views/addtask.jade
+++ b/taskTrackerApp/views/addtask.jade
@@ -2,7 +2,7 @@ extends layout
 
 block content
     .container
-
+    
         h1= title
         form#formAddTask(name="addtask",method="post",action="/addtask")
             input.input-block-level#inputTaskName(type="text", placeholder="Task Name", name="taskname")
@@ -11,4 +11,6 @@ block content
             input#inputTaskDesc(type="text", placeholder="Task Description", name="taskdesc")
             #[br]
             #[br]
-            button.btn.btn-primary#btnSubmit(type="submit") Submit
+            button.btn.btn-primary#btnSubmit(type="submit")
+                i.fa.fa-check.fa-fw.fa-lg(aria-hidden="true")
+                | Submit
