--- a/taskTrackerApp/views/layout.jade
+++ b/taskTrackerApp/views/layout.jade
@@ -6,35 +6,38 @@ html( lang="en")
     meta( http-equiv='X-UA-Compatible', content='IE=edge' )
     meta( name='viewport', content='width=device-width, initial-scale=1.0' )
     meta( name='description', content='Task Tracker App' )
-    //- Bootswatch Theme
+
     link(href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.0/superhero/bootstrap.min.css", rel="stylesheet")
-    link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css')
+    link(href='https://fonts.googleapis.com/css?family=Roboto', rel='stylesheet')
     script(defer='', src='https://use.fontawesome.com/releases/v5.0.10/js/all.js', integrity='sha384-slN8GvtUJGnv6ca26v8EzVaR9DC58QEwsIk9q1QXdCU8Yu8ck/tL/5szYlBbqmS+', crossorigin='anonymous')
+    link(rel='stylesheet', href='/stylesheets/style.css')
+
   body(style="padding-bottom:10rem;")
     .container
-    //- Start of navbar
-    nav.navbar.navbar-default( role="navigation" )
-        .navbar-header
-            button.navbar-toggle.collapsed( type="button", data-toggle="collapse", data-target="#navbar-inverse", aria-expanded="false", aria-controls="navbar")
-                span.sr-only Toggle navigation
-                span.icon-bar
-                span.icon-bar
-                span.icon-bar
-            a.navbar-brand(href="/") Task Tracker
-    
-        #navbar-inverse.collapse.navbar-collapse
-            ul.nav.navbar-nav
-                li: a( href="/") 
-                    i.fas.fa-home.fa-fw.fa-lg(aria-hidden="true")
-                    |   Home
-                li: a( href="/tasklist" ) Task List
-                li: a( href="/addtask" ) Add Task
-  //- Start of content area                  
-  block content
+        //- Start of navbar
+        nav.navbar.navbar-default( role="navigation" )
+            .navbar-header
+                button.navbar-toggle.collapsed(type="button", data-toggle="collapse", data-target="#navbar-inverse", aria-expanded="false", aria-controls="navbar")
+                    span.sr-only Toggle navigation
+                    span.icon-bar
+                    span.icon-bar
+                    span.icon-bar
+                a.navbar-brand(href="/") Task Tracker
+        
+            #navbar-inverse.collapse.navbar-collapse
+                ul.nav.navbar-nav
+                    li: a( href="/") 
+                        i.fas.fa-home.fa-fw.fa-lg(aria-hidden="true")
+                        |   Home
+                    li: a( href="/tasklist" )
+                        i.fa.fa-th-list.fa-fw.fa-lg(aria-hidden="true")
+                        |   Task List
+                    li: a( href="/addtask" )
+                        i.fa.fa-plus.fa-fw.fa-lg(aria-hidden="true")
+                        | Add Task
 
     script( src='//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js' )
-    script( src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js' )
-        
+    script( src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js' )               
  
-        
+  block content
