--- a/taskTrackerApp/views/addtask.jade
+++ b/taskTrackerApp/views/addtask.jade
@@ -11,6 +11,13 @@ block content
             input#inputTaskDesc(type="text", placeholder="Task Description", name="taskdesc")
             #[br]
             #[br]
-            button.btn.btn-primary#btnSubmit(type="submit")
+            button.btn.btn-primary#btnGroup(type="submit")
                 i.fa.fa-check.fa-fw.fa-lg(aria-hidden="true")
                 | Submit
+            button.btn.btn-primary#btnGroup(type="submit")
+                i.fas.fa-edit.fa-fw.fa-lg(aria-hidden="true")
+                | Update
+            button.btn.btn-primary#btnGroup(type="submit")
+                i.fas.fa-trash-alt.fa-fw.fa-lg(aria-hidden="true")
+                | Delete
+
