--- a/taskTrackerApp/views/tasklist.jade
+++ b/taskTrackerApp/views/tasklist.jade
@@ -9,3 +9,13 @@ block content
       each task, i in tasklist
         li
           task.task= task.description
+      //- Suedo code for update / delete functionality
+      //- tr
+      //-     td
+      //-     td
+      //-     td
+      //-       form method=get action=/delete/deleteTask
+      //-       button delete
+      //-     td
+      //-       form method=get action=/edit/updateTask
+      //-       button delete
