--- a/taskTrackerApp/views/layout.jade
+++ b/taskTrackerApp/views/layout.jade
@@ -39,10 +39,8 @@ html( lang="en")
                 form.navbar-form.navbar-right(role='search')
                     .form-group
                         input.form-control(type='text', placeholder='Search')
-                    button.btn.btn-default(type='submit') Submit
-
-
-
+                    button.btn.btn-default(type='submit')
+                        i.fas.fa-search.fa-fw.fa-lg.text-info(aria-hidden="true")
 
     script( src='//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js' )
     script( src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js' )               
