--- a/taskTrackerApp/views/tasklist.jade
+++ b/taskTrackerApp/views/tasklist.jade
@@ -6,20 +6,20 @@ block content
 		h1.
 			Task List
 		div
-			each task, i in tasklist
+			each task, i in tasks
 				.thumbnail
 					.caption
-						h3 
+						h3
 							task.task= task.task
 						p
 							task.task= task.description
 						.btn-toolbar(role='toolbar', aria-label='Toolbar of buttons')
-									button.btn.btn-primary#btnGroup(type="button")
-										i.fas.fa-edit.fa-fw.fa-lg(aria-hidden="true")
-										| Update
-									button.btn.btn-danger#btnGroup(type="button")
-										i.fas.fa-trash-alt.fa-fw.fa-lg(aria-hidden="true")
-										| Delete
+							a( href="/update/#{task.id}" ).btn.btn-primary#btnGroup
+								i.fas.fa-edit.fa-fw.fa-lg(aria-hidden="true")
+								| Update
+							button.btn.btn-danger#btnGroup(type="button")
+								i.fas.fa-trash-alt.fa-fw.fa-lg(aria-hidden="true")
+								| Delete
 
 			//- Suedo code for update / delete functionality
 			//- tr
