--- a/taskTrackerApp/views/success.jade
+++ b/taskTrackerApp/views/success.jade
@@ -1,9 +1,8 @@
 extends layout
 
 block content
-  .container-fluid
-    .alert-success
+  .container
       h1= message
-      
-      button.btn.btn-primary
-        a(style="color: #ffffff" href="/tasklist") TASK LIST
+      #[br]
+      a( href="/tasklist").btn.btn-primary
+        | Return to Task List
