Changed body height to 100%, moved fontawesome cdn to bottom of body

--- a/taskTrackerApp/public/stylesheets/style.css
+++ b/taskTrackerApp/public/stylesheets/style.css
@@ -1,4 +1,9 @@
+html {
+  height: 100%;
+}
+
 body {
+  min-height: 100%;
   padding: 50px;
   font-family: "Roboto", sans-serif;
   background: rgb(2, 0, 36) no-repeat center center fixed;
