--- a/taskTrackerApp/public/stylesheets/style.css
+++ b/taskTrackerApp/public/stylesheets/style.css
@@ -50,8 +50,26 @@ a {
 
 #inputTaskName {
   height: 30px;
+  width: 165px;
+  -webkit-transition: width 1s ease-in-out;
+  -moz-transition: width 1s ease-in-out;
+  -o-transition: width 1s ease-in-out;
+  transition: width 1s ease-in-out;
 }
 
 #inputTaskDesc {
   height: 30px;
+  width: 165px;
+  -webkit-transition: width 1s ease-in-out;
+  -moz-transition: width 1s ease-in-out;
+  -o-transition: width 1s ease-in-out;
+  transition: width 1s ease-in-out;
+}
+
+#inputTaskName:focus {
+  width: 500px;
+}
+
+#inputTaskDesc:focus {
+  width: 500px;
 }
