--- a/taskTrackerApp/views/layout.jade
+++ b/taskTrackerApp/views/layout.jade
@@ -26,13 +26,13 @@ html( lang="en" )
         
             #navbar-inverse.collapse.navbar-collapse
                 ul.nav.navbar-nav
-                    li: a( href="/") 
+                    li: a#nav-links( href="/") 
                         i.fas.fa-home.fa-fw.fa-lg.text-info(aria-hidden="true")
                         | Home
-                    li: a( href="/tasklist" )
+                    li: a#nav-links( href="/tasklist" )
                         i.fa.fa-th-list.fa-fw.fa-lg.text-info(aria-hidden="true")
                         | Task List
-                    li: a( href="/addtask" )
+                    li: a#nav-links( href="/addtask" )
                         i.fa.fa-plus.fa-fw.fa-lg.text-info(aria-hidden="true")
                         | Add Task
 
