Added form validation / back to top link on tasklist

--- a/taskTrackerApp/views/addtask.jade
+++ b/taskTrackerApp/views/addtask.jade
@@ -4,10 +4,10 @@ block content
     .container
         h1= title
         form#formAddTask(name="addtask",method="post",action="/addtask")
-            input.input-block-level#inputTaskName(type="text", placeholder="Task Name", name="taskname")
+            input.input-block-level#inputTaskName(type="text", placeholder="Task Name", name="taskname", autofocus, required='', pattern="[a-zA-Z ]+", title="Text only, no numbers or special characters")
             #[br]
             #[br]
-            input#inputTaskDesc(type="text", placeholder="Task Description", name="taskdesc")
+            input#inputTaskDesc(type="text", placeholder="Task Description", name="taskdesc", required='')
             #[br]
             #[br]
             button.btn.btn-primary#btnGroup(type="submit")
