--- a/taskTrackerApp/views/layout.jade
+++ b/taskTrackerApp/views/layout.jade
@@ -12,7 +12,7 @@ html( lang="en" )
     link(href='https://fonts.googleapis.com/css?family=Roboto', rel='stylesheet')
     link(rel='stylesheet', href='/stylesheets/style.css')
 
-  body(style="padding-bottom:10rem;")
+  body(id="top", style="padding-bottom:10rem;")
     .container
         //- Start of navbar
         nav.navbar.navbar-default( role="navigation" )
@@ -41,3 +41,4 @@ html( lang="en" )
     script(defer='', src='https://use.fontawesome.com/releases/v5.0.10/js/all.js', integrity='sha384-slN8GvtUJGnv6ca26v8EzVaR9DC58QEwsIk9q1QXdCU8Yu8ck/tL/5szYlBbqmS+', crossorigin='anonymous')
     script( src='//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js' )
     script( src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js' )
+    script(type='text/javascript', src='/javascripts/scrollToTop.js')
