--- a/taskTrackerApp/views/tasklist.jade
+++ b/taskTrackerApp/views/tasklist.jade
@@ -21,3 +21,5 @@ block content
 								button(type="submit").btn.btn-danger#btnGroup
 									i.fas.fa-trash-alt.fa-fw.fa-lg(aria-hidden="true")
 									| Delete
+		
+		a(href='#top', onclick='scrollToTop();return false')#backToTop Back to Top &uarr;
