--- a/taskTrackerApp/public/stylesheets/style.css
+++ b/taskTrackerApp/public/stylesheets/style.css
@@ -55,11 +55,6 @@ a {
 
 #inputTaskName {
   height: 30px;
-  width: 165px;
-  -webkit-transition: width 1s ease-in-out;
-  -moz-transition: width 1s ease-in-out;
-  -o-transition: width 1s ease-in-out;
-  transition: width 1s ease-in-out;
 }
 
 #inputTaskDesc {
@@ -71,10 +66,11 @@ a {
   transition: width 1s ease-in-out;
 }
 
-#inputTaskName:focus {
-  width: 500px;
-}
-
 #inputTaskDesc:focus {
   width: 500px;
+}
+#backToTop {
+  text-align: right;
+  color: yellow;
+  font-size: 28px;
 }
