--- a/taskTrackerApp/views/tasklist.jade
+++ b/taskTrackerApp/views/tasklist.jade
@@ -21,5 +21,7 @@ block content
 								button(type="submit").btn.btn-danger#btnGroup
 									i.fas.fa-trash-alt.fa-fw.fa-lg(aria-hidden="true")
 									| Delete
-		
-		a(href='#top', onclick='scrollToTop();return false')#backToTop Back to Top &uarr;
+
+	//- Scroll to top button
+	a#return-to-top
+		i.icon-chevron-up
