--- a/taskTrackerApp/views/index.jade
+++ b/taskTrackerApp/views/index.jade
@@ -2,4 +2,9 @@ extends layout
 
 block content
   .container
-    h1 Welcome to Task Tracker!
+    .jumbotron
+
+      h3 Welcome to Task Tracker!
+
+      p
+        | This app allows you to keep track of any sort of task, as well as update and delete them as needed
