--- a/taskTrackerApp/views/layout.jade
+++ b/taskTrackerApp/views/layout.jade
@@ -1,5 +1,5 @@
 doctype html
-html( lang="en" )
+html( lang='en' )
   head
     title= title
     meta( charset='utf-8' )
@@ -7,10 +7,11 @@ html( lang="en" )
     meta( name='viewport', content='width=device-width, initial-scale=1.0' )
     meta( name='description', content='Task Tracker App' )
 
-    link(href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.0/superhero/bootstrap.min.css", rel="stylesheet")
-    link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css')
+    link(href='//maxcdn.bootstrapcdn.com/bootswatch/3.3.0/superhero/bootstrap.min.css', rel='stylesheet')
+    link(href='https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css', rel='stylesheet')
+    link(href='//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css', rel='stylesheet')
     link(href='https://fonts.googleapis.com/css?family=Roboto', rel='stylesheet')
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    link(href='/stylesheets/style.css', rel='stylesheet')
 
   body(id="top", style="padding-bottom:10rem;")
     .container
@@ -39,6 +40,6 @@ html( lang="en" )
     block content
 
     script(defer='', src='https://use.fontawesome.com/releases/v5.0.10/js/all.js', integrity='sha384-slN8GvtUJGnv6ca26v8EzVaR9DC58QEwsIk9q1QXdCU8Yu8ck/tL/5szYlBbqmS+', crossorigin='anonymous')
-    script( src='//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js' )
-    script( src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js' )
+    script(src='//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
+    script(src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js')
     script(type='text/javascript', src='/javascripts/scrollToTop.js')
