--- a/taskTrackerApp/views/layout.jade
+++ b/taskTrackerApp/views/layout.jade
@@ -23,8 +23,10 @@ html( lang='en' )
                     span.icon-bar
                     span.icon-bar
                     span.icon-bar
-                a.navbar-brand(href="/") Task Tracker
-        
+                a.navbar-brand(href="/")
+                    | Task Tracker
+                    
+     
             #navbar-inverse.collapse.navbar-collapse
                 ul.nav.navbar-nav
                     li: a#nav-links( href="/") 
