--- a/taskTrackerApp/views/layout.jade
+++ b/taskTrackerApp/views/layout.jade
@@ -41,3 +41,5 @@ html( lang="en")
     script( src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js' )             
  
     block content
+
+    footer.footer
